content and style update

--- a/_config.yml
+++ b/_config.yml
@@ -1,26 +1,26 @@
 ---
 
-port: 4000
-host: 0.0.0.0
+port: 3000
+host: 127.0.0.1
 safe: false
 
 
 ### site serving configuration ###
 exclude: [CNAME, README.md, .gitignore]
 permalink: /:title ## disables post output
-timezone: null
+timezone: Asia/Kolkata
 lsi: false
 markdown: kramdown
 
 
 ### content configuration ###
-title:       "SinglePaged - Simple Jekyll template"
-keywords:    "SinglePaged, jekyll, template, github, blog, single page"
-description: "A single-page template for Jekyll based blogs (like what you'd use on github pages!)"
-source_link: "https://github.com/t413/SinglePaged"
+title:       "Mano"
+keywords:    "Mano, Profession, Data Professional, Data Analyst, Intrapreneur, Hobbyist, Product Designer, Inventor"
+description: "Manogna Mano's work, hobbies and life"
+source_link: ""
 favicon:     "img/favicon.ico"
 touch_icon:  "img/apple-touch-icon.png"
-google_analytics_key: UA-49607422-1 ## put YOUR key here to enable tracking! (blank to disable)
+google_analytics_key: ## put YOUR key here to enable tracking! (blank to disable)
 
 
 ### template colors, used site-wide via css ###
@@ -35,4 +35,3 @@ colors:
 
 kramdown:
   auto_ids:  false
-
