--- a/_config.yml
+++ b/_config.yml
@@ -20,6 +20,8 @@ description: "Manogna Mano's portfolio"
 source_link: ""
 favicon:     "img/favicon.ico"
 touch_icon:  "img/apple-touch-icon.png"
+image:  "img/apple-touch-icon.png"
+og:image:  "img/apple-touch-icon.png"
 google_analytics_key: ## put YOUR key here to enable tracking! (blank to disable)
 
 
