--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,7 @@ markdown: kramdown
 
 
 ### content configuration ###
+url: "https://mull.in"
 title:       "Mano"
 keywords:    "Mano, Profession, Data Professional, Data Analyst, Intrapreneur, Hobbyist, Product Designer, Inventor"
 description: "Manogna Mano's portfolio"
@@ -21,7 +22,6 @@ source_link: ""
 favicon:     "img/favicon.ico"
 touch_icon:  "img/apple-touch-icon.png"
 image:  "img/apple-touch-icon.png"
-og:image:  "img/apple-touch-icon.png"
 google_analytics_key: ## put YOUR key here to enable tracking! (blank to disable)
 
 
