--- a/_config.yml
+++ b/_config.yml
@@ -16,12 +16,12 @@ markdown: kramdown
 ### content configuration ###
 url: "https://mull.in"
 title:       "Mano"
-keywords:    "Mano, Profession, Data Professional, Data Analyst, Intrapreneur, Hobbyist, Product Designer, Inventor"
+keywords:    "Mano, Manogna, Manogna Mano, Profession, Data Professional, Data Analyst, Intrapreneur, Hobbyist, Product Designer, Inventor"
 description: "Manogna Mano's portfolio"
 source_link: ""
 favicon:     "img/favicon.ico"
 touch_icon:  "img/apple-touch-icon.png"
-image:  "img/apple-touch-icon.png"
+image:  "img/avatar.png"
 google_analytics_key: ## put YOUR key here to enable tracking! (blank to disable)
 
 
