--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ markdown: kramdown
 
 
 ### content configuration ###
-url: "https://mull.in"
+url: "https://mano.direct"
 title:       "Mano"
 keywords:    "Mano, Manogna, Manogna Mano, Profession, Data Professional, Data Analyst, Intrapreneur, Hobbyist, Product Designer, Inventor"
 description: "Manogna Mano's portfolio"
